Add simple example